plugins {
    id 'application'
    id "io.freefair.lombok" version "6.4.1"
//    id "me.champeau.jmh" version "0.6.6"
}

group 'org.mzuri'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.slf4j:slf4j-simple:1.7.36'
    implementation 'net.sourceforge.argparse4j:argparse4j:0.9.0'


    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

application {
    mainClass.set('org.mzuri.wordle.WordleApplication')
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}


sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
